[gd_scene load_steps=4 format=2]

[ext_resource path="res://witch.gd" type="Script" id=1]
[ext_resource path="res://assets/yuli.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.29292, 6.16668 )

[node name="MarginContainer" type="MarginContainer"]
margin_right = 99.0
margin_bottom = 49.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 99.0
margin_bottom = 49.0
rect_clip_content = true
focus_mode = 0
enabled_focus_mode = 0
text = "sdfsdfsdf"
icon = ExtResource( 2 )
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Witch" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Collider" type="CollisionShape2D" parent="Witch"]
shape = SubResource( 1 )

[connection signal="button_down" from="Button" to="Witch" method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="Witch" method="_on_Button_button_up"]
[connection signal="area_entered" from="Witch" to="Witch" method="_on_Witch_area_entered"]
[connection signal="area_exited" from="Witch" to="Witch" method="_on_Witch_area_exited"]
